# STag_ROS2

./: CMakeLists.txt  README.md  imports.txt  package.xml  requirements.txt  setup.cfg  setup.py
bash/: README.md  mosquitto_broker.sh  png-to-stl.sh
config/: images.rviz  images_realsense.rviz  images_usb_cam.rviz  mosquitto.conf  params.yaml  params_robot.yaml  params_stag.yaml  params_usb_cam.yaml  params_usb_cam_2.yaml  params_usb_cam_ir.yaml  render.rviz  stag_markers.yaml
launch/: basic.launch.py  locator.launch.py  realsense.launch.py  system.launch.py  usb_cam.launch.py
marker_position_tests/: markers_4_and_5_clipboard.yaml
stag_ros2/: calibrator.py  experimentor.py  merge_high_capacity_markers.py  mqtt_forwarder.py  mqtt_receiver.py  processor.py  renderer.py
stag_ros2/marker_generators/: assess_results.py  extract_colours.py  generate_high_capacity.py  generate_high_occlusion.py  generate_markers.py  generate_occlusions.py  high_capacity.py  high_occlusion.py  hue_greyscale.py  utils.py
stag_ros2/utils/: process_polygon.py  rotate_region.py
tests/HO23/HO2_stl/: binary_black.stl  binary_blue.stl  binary_cyan.stl
tests/HO23/HO_80_stl/: binary_black.stl  binary_black_0.05mm_PLA_MINI_1h12m.gcode  binary_black_0.25mm_PLA_MINI_14m.gcode  binary_blue.stl  binary_blue_0.05mm_PLA_MINI_9m.gcode  binary_blue_0.25mm_PLA_MINI_2m.gcode  binary_cyan.stl  binary_cyan_0.05mm_PLA_MINI_10m.gcode  binary_cyan_0.25mm_PLA_MINI_2m.gcode  binary_green.stl  binary_green_0.05mm_PLA_MINI_8m.gcode  binary_green_0.25mm_PLA_MINI_2m.gcode  binary_purple.stl  binary_red.stl  (+10 more)
(+33 files in other folders)
