<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stag_ros2</name>
  <version>0.0.1</version>
  <description>The STag_ROS2 package</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>usb_cam</depend>
  <depend>cv_bridge</depend>
  <!--<depend>pip_stag_python</depend>-->
  <!--<depend>opencv_python</depend>-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





